test/semantic_errors/invalid_call3.mc
void foo(int a) {

}

int main() {
    int a;
    int b;
    foo(a, b);
}